--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,48 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+		   <groupId>fr.opensagres.xdocreport</groupId>
+		   <artifactId>fr.opensagres.xdocreport.document.odt</artifactId>
+		   <version>2.0.1</version>
+		</dependency>
+		
+		<dependency>
+		   <groupId>fr.opensagres.xdocreport</groupId>
+		   <artifactId>fr.opensagres.xdocreport.template.velocity</artifactId>
+		   <version>2.0.1</version>
+		</dependency>
+		
+		<dependency>
+		   <groupId>fr.opensagres.xdocreport</groupId>
+		   <artifactId>fr.opensagres.xdocreport.converter.odt.odfdom</artifactId>
+		   <version>2.0.1</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-swagger2</artifactId>
+		    <version>2.7.0</version>
+		</dependency>
+
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-swagger-ui</artifactId>
+		    <version>2.7.0</version>
+		</dependency>
+				
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-spring-web</artifactId>
+		    <version>2.7.0</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>1.3.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
