--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
 		</dependency>
 		
 		<dependency>
+		    <groupId>com.itextpdf</groupId>
+		    <artifactId>itextpdf</artifactId>
+		    <version>5.5.12</version>
+		</dependency>
+		
+		<dependency>
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-io</artifactId>
 		    <version>1.3.2</version>
