--- a/pom.xml
+++ b/pom.xml
@@ -79,17 +79,24 @@
 		    <artifactId>springfox-spring-web</artifactId>
 		    <version>2.7.0</version>
 		</dependency>
-		
-		<dependency>
-		    <groupId>com.itextpdf</groupId>
-		    <artifactId>itextpdf</artifactId>
-		    <version>5.5.12</version>
-		</dependency>
+	
 		
 		<dependency>
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-io</artifactId>
 		    <version>1.3.2</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.itextpdf</groupId>
+		    <artifactId>kernel</artifactId>
+		    <version>7.1.0</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.itextpdf</groupId>
+		    <artifactId>layout</artifactId>
+		    <version>7.1.0</version>
 		</dependency>
 	</dependencies>
 
